--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,3 +146,45 @@
   padding: 6px 15px 6px 15px;
   text-decoration: none;
 }
+
+.btnYes{
+  margin:0px 5px 0px 0px;
+  background: #39c93e;
+  background-image: -webkit-linear-gradient(top, #29f20e, #10a875);
+  background-image: -moz-linear-gradient(top, #29f20e, #10a875);
+  background-image: -ms-linear-gradient(top, #29f20e, #10a875);
+  background-image: -o-linear-gradient(top, #29f20e, #10a875);
+  background-image: linear-gradient(to bottom, #29f20e, #10a875);
+  display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+
+    -webkit-box-shadow: 2px 2px 5px #666666;
+    -moz-box-shadow: 2px 2px 5px #666666;
+    box-shadow: 2px 2px 5px #666666;
+    font-family: Arial;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.deleteAlert{
+  background: #ff7878;
+padding: 12px;
+margin:0px;
+}
